--- a/_pages/hpv2.html
+++ b/_pages/hpv2.html
@@ -28,7 +28,7 @@ permalink: /hpv2/
 		</div>
 
 		<a class="feature-arrow-down scroll" href="#twitter">
-			<i class="fa fa-arrow-circle-o-down" aria-hidden="true"></i>
+			<i class="fas fa-arrow-circle-down"></i>
 		</a>
 	</div>
 
