--- a/index.html
+++ b/index.html
@@ -3,21 +3,33 @@ layout: homepage
 title: "Home"
 permalink: /
 ---
+<nav class="navbar navbar-expand-lg navbar-hp">
+	<div class="navbar-collapse" id="navbarText">
+		<ul class="navbar-nav mr-auto">
+			<li class="nav-item">
+				<a class="nav-link" href="/banzo/">Restaurant</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="/food-carts/">Food Carts</a>
+			</li>
+		</ul>
+		<span class="navbar-text">
+			Open 7 days 11am - 9pm | <i class="fas fa-phone"></i> <tel>(608) 441-2002</tel>
+		</span>
+	</div>
+</nav>
 <div class="container-fluid">
 	<div class="row full-height feature d-flex align-items-center">
 		<div class="col d-flex justify-content-center">
 			<div class="hp-pages">
 				<li>
-					<a href="/banzo/"><img src="/images/banzo-01.png" width="100%" style="max-width: 210px;"></a>
-				</li>
-				<li>
-					<a href="/food-carts/"><img src="/images/cart-01.png" width="100%" style="max-width: 210px;"></a>
+					<a href="https://www.toasttab.com/banzo-sherman-ave/v2/online-order#!/" target="_blank"><img src="/images/order-online.png" width="100%" style="max-width: 210px;"></a>
 				</li>
 			</div>
 		</div>
 
 		<a class="feature-arrow-down scroll" href="#twitter">
-			<i class="fa fa-arrow-circle-o-down" aria-hidden="true"></i>
+			<i class="fas fa-arrow-circle-down"></i>
 		</a>
 	</div>
 
