--- a/_pages/hpv2.html
+++ b/_pages/hpv2.html
@@ -1,7 +1,7 @@
----
-layout: homepage
-permalink: /hpv2/
----
+
+<!-- layout: homepage
+permalink: /hpv2/ -->
+
 <nav class="navbar navbar-expand-lg navbar-hp">
 	<div class="navbar-collapse" id="navbarText">
 		<ul class="navbar-nav mr-auto">
