--- a/_pages/hpv2.html
+++ b/_pages/hpv2.html
@@ -163,14 +163,263 @@ permalink: /hpv2/
 			</a>
 			<p>(608) 441-2002</p>
 			<a href="https://www.facebook.com/banzomadison/" target="_blank">
-				<i class="fa fa-facebook" aria-hidden="true"></i>
+				<i class="fab fa-facebook-f"></i>
 			</a>
 			<a href="https://twitter.com/banzomadison/" target="_blank">
-				<i class="fa fa-twitter" aria-hidden="true"></i>
+				<i class="fab fa-twitter"></i>
 			</a>
 			<a href="https://www.instagram.com/banzomadison/" target="_blank">
-				<i class="fa fa-instagram" aria-hidden="true"></i>
+				<i class="fab fa-instagram"></i>
 			</a>
+		</div>
+	</div>
+
+	<div id="menu" class="row pad6vw d-flex justify-content-center">
+		<div class="col-md-8">
+			<h2 class="title menu">Restaurant Menu</h2>
+
+			<div id="banzo-menu">
+
+				<!--WHAT DO YOU WANT-->
+				<div class="row">
+					<div class="col">
+						<h5 class="menu-headline">1. What do you want?</h5>
+						<p class="menu-ooo">*we use cholesterol-free trans fat-free oil in our fryers.</p>
+						<p class="menu-ooo"><vegan><span>v</span></vegan> = vegan</p>
+
+						<div class="menu-item">
+							<p class="menu-title">The Banzo &#8211; $8.50 <vegan><span>v</span></vegan></p>
+							<p class="menu-descript">Classic falafel. Garbanzo beans ground with veggies, herbs and spices.</p>
+						</div>
+
+						<div class="menu-item">
+							<p class="menu-title">The Chick &#8211; $9.50</p>
+							<p class="menu-descript">Marinated chicken tenderloin in our house marinade.</p>
+						</div>
+
+						<div class="menu-item">
+							<p class="menu-title">The Kebab &#8211; $9.95</p>
+							<p class="menu-descript">Traditional hand-made ground beef kebab.</p>
+						</div>
+
+						<div class="menu-item">
+							<p class="menu-title">The Harvest &#8211; $8.75 <vegan><span>v</span></vegan></p>
+							<p class="menu-descript">2 falafel balls with slices of seared eggplant.</p>
+						</div>
+
+						<div class="menu-item">
+							<p class="menu-title">The Schnitzel &#8211; $9.95</p>
+							<p class="menu-descript">Breaded, fried chicken breast with our house seasoning.</p>
+						</div>
+
+						<div class="menu-item">
+							<p class="menu-title">The F-Bomb &#8211; $9.25</p>
+							<p class="menu-descript">2 falafel balls plus choice of marinated chicken or beef kebabs.</p>
+						</div>
+						<div class="menu-item">
+							<p class="menu-title">The Batata &#8211; $9.00 <vegan><span>v</span></vegan></p>
+							<p class="menu-descript">Fresh ground sweet potato falafel.</p>
+						</div>
+						<div class="menu-item">
+							<p class="menu-title">The Lamb &#8211; $12.00</p>
+							<p class="menu-descript">Locally sourced lamb.  Preparation changes frequently.</p>
+						</div>
+						<div class="menu-item">
+							<p class="menu-title">The Shawarma &#8211; $9.50</p>
+							<p class="menu-descript">Slow roasted seasoned chicken thighs.</p>
+						</div>
+					</div>
+				</div>
+
+				<!--HOW DO YOU WANT IT?-->
+				<div class="row">
+					<div class="col">
+						<h5 class="menu-headline">2. How do you want it?</h5>
+
+						<div class="menu-item">
+							<p class="menu-title">Pita Sandwich</p>
+							<p class="menu-descript">Served in white or whole wheat pita filled with hummus, chopped salad, chips, pickles and tahini, yogurt or hot sauce. Packaged in our signature Banzo box.</p>
+						</div>
+
+						<div class="menu-item">
+							<p class="menu-title">Platter - (add $2.95)</p>
+							<p class="menu-descript">Served on a plate with majadra rice, hummus, chopped salad and a side of white or whole wheat pita.</p>
+						</div>
+
+						<div class="menu-item">
+							<p class="menu-title">Hummus Plate - (add $1.75)</p>
+							<p class="menu-descript">Topped over our fresh homemade hummus with tahini, parsley, olive oil, chickpeas &amp; pita bread.</p>
+						</div>
+
+						<div class="menu-item">
+							<p class="menu-title">Salad - (add $2.25)</p>
+							<p class="menu-descript">Over a bed of mixed greens topped with chopped salad, olives, chickpeas, and our homemade lemon-agave dressing. Feta cheese optional.</p>
+						</div>
+					</div>
+				</div>
+
+				<!--LUNCH SPECIALS-->
+				<div class="row">
+					<div class="col">
+						<h5 class="menu-headline">Lunch Specials</h5>
+						<p class="menu-descript">(11am &#8211; 2pm)</p>
+
+						<div class="menu-item">
+							<p class="menu-title">2 Banzo Pita Sandwiches &#8211; $15</p>
+						</div>
+					</div>
+				</div>
+
+				<!--SIDES-->
+				<div class="row">
+					<div class="col">
+						<h5 class="menu-headline">Sides</h5>
+						<p class="menu-descript">(1 for $3.95 or choose 3 for $10)</p>
+
+						<div class="row">
+							<div class="col">
+								<div class="menu-item">
+									<p class="menu-title">Falafel</p>
+									<p class="menu-descript">4 crispy falafel balls served w/ tahini sauce</p>
+								</div>
+
+								<div class="menu-item">
+									<p class="menu-title">Couscous tabouli</p>
+									<p class="menu-descript">couscous, parsley, tomato, and scallions w/ lemon dressing</p>
+								</div>
+
+								<div class="menu-item">
+									<p class="menu-title">Babaganush</p>
+									<p class="menu-descript">roasted eggplant spread; served w/ pita</p>
+								</div>
+
+								<div class="menu-item">
+									<p class="menu-title">Hummus</p>
+									<p class="menu-descript">made fresh daily served w/ pita</p>
+								</div>
+
+								<div class="menu-item">
+									<p class="menu-title">Batata</p>
+									<p class="menu-descript">4 freshly fried sweet potato falafel</p>
+								</div>
+							</div>
+							<div class="col">
+								<div class="menu-item">
+									<p class="menu-title">Hand-cut fries</p>
+									<p class="menu-descript">cut from Wisconsin grown potatoes</p>
+								</div>
+
+								<div class="menu-item">
+									<p class="menu-title">Chopped Salad</p>
+									<p class="menu-descript">cucumber &amp; tomato salad w/ house-made dressing</p>
+								</div>
+
+								<div class="menu-item">
+									<p class="menu-title">Majadra Rice</p>
+									<p class="menu-descript">fragrant rice pilaf w/ caramelized onions and lentils</p>
+								</div>
+
+								<div class="menu-item">
+									<p class="menu-title">Fried Cauliflower</p>
+									<p class="menu-descript">served with herbed tahini</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+
+				<!--DRINKS-->
+				<div class="row">
+					<div class="col">
+						<h5 class="menu-headline">Drinks</h5>
+
+						<div class="menu-item">
+							<p class="menu-title">Reed's ginger beer, Sprecher cola, Gray's root beer, Izze, San pellegrino, Boxed water &#8211; $1.95</p>
+						</div>
+
+						<div class="menu-item">
+							<p class="menu-title">Home-brewed Iced Tea &#8211; $1.95</p>
+						</div>
+
+						<div class="menu-item">
+							<p class="menu-title">Nessalla Kombucha &#8211; $3.95</p>
+						</div>
+
+						<div class="menu-item">
+							<p class="menu-title">Nantucket Nectars &#8211; $2.25</p>
+						</div>
+
+						<div class="menu-item">
+							<p class="menu-title">LaCroix Sparkling Water &#8211; $1.75</p>
+						</div>
+					</div>
+				</div>
+
+				<!--SOUPS-->
+				<div class="row">
+					<div class="col">
+						<h5 class="menu-headline">Soup</h5>
+						<p class="menu-descript"><strong>Cup</strong> - $2.95 <strong>Bowl</strong> - $4.95 (Served w/ pita chips)</p>
+
+						<div class="menu-item">
+							<p class="menu-title">Lentil soup</p>
+						</div>
+						<div class="menu-item">
+							<p class="menu-title">Soup of the Day</p>
+						</div>
+					</div>
+				</div><!--END row-->
+			</div><!--END #BANZO MENU-->
+		</div>
+		<div class="clearfix"></div>
+		<div id="catering" class="col-md-8">
+			<h2 class="title">Catering <a href="/pdf/banzocateringmenu.pdf" target="_blank"><button type="button" class="btn btn-dark">CATERING MENU.PDF</button></a></h2>
+
+			<p>Tell us about your event! We'll take care of the rest.</p>
+			<p>*No requests are confirmed until approval is received from our catering team. Please allow up to 2 business days for a response from our catering team. DO NOT submit duplicate requests via email or phone. If your event requires immediate confirmation, please skip this form and call (608) 441-2002. Thank you!</p>
+
+			<div class="row">
+				<div class="col">
+					<form role="form" action="https://formspree.io/catering.banzo@gmail.com" method="POST">
+						<input type="hidden" name="recipient" value="catering.banzo#gmail.com">
+						<div class="row">
+							<div class="col">
+								<div class="form-group">
+									<label for="inputName">Your Name</label>
+									<input type="text" name="name" class="form-control" id="inputName">
+								</div>
+								<div class="form-group">
+									<label for="inputPhone">Phone Number</label>
+									<input type="tel" name="phone-number" class="form-control" id="inputPhone">
+								</div>
+								<div class="form-group">
+									<label for="inputDate">Event Date</label>
+				    			<input type="text" name="date" class="form-control" id="inputDate">
+								</div>
+							</div>
+							<div class="col">
+								<div class="form-group">
+									<label for="inputTime">Event time</label>
+									<input type="text" name="time" class="form-control" id="inputTime">
+								</div>
+								<div class="form-group">
+									<label for="inputGuests">Number of guests</label>
+									<input type="text" name="guest-number" class="form-control" id="inputGuests">
+								</div>
+								<div class="form-group">
+									<label for="inputEmail">Your email</label>
+									<input type="email" name="email" class="form-control" id="inputEmail">
+								</div>
+							</div>
+						</div>
+						<div class="form-group">
+							<label for="contact-message">Additional information</label>
+							<textarea type="text" name="aditional-info" class="form-control" id="contact-message" rows="5"></textarea>
+						</div>
+						<button type="submit" value="send" name="submit" class="btn btn-primary">Submit</button>
+					</form>
+				</div>
+			</div>
 		</div>
 	</div>
 
