--- a/_pages/hpv2.html
+++ b/_pages/hpv2.html
@@ -17,6 +17,7 @@ permalink: /hpv2/
 </nav>
 
 <div id="fly-in-menu" class="d-flex">
+	<div class="close slideMenu">Close</div>
 	<ul class="align-self-center">
 		<li>Order Online</li>
 		<li>About Us</li>
