moving parts around

--- a/_pages/hpv2.html
+++ b/_pages/hpv2.html
@@ -3,32 +3,24 @@ layout: homepage
 permalink: /hpv2/
 ---
 
-<nav class="navbar navbar-expand-lg navbar-hp">
-	<div class="navbar-collapse" id="navbarText">
-		<ul class="navbar-nav mr-auto">
-			<li class="nav-item">
-				<a class="nav-link js-toggle-left-slidebar"><i class="fas fa-bars"></i> Menu</a>
-			</li>
-		</ul>
-		<span class="navbar-text">
-			Open 7 days 11am - 9pm | <i class="fas fa-phone"></i> <tel>(608) 441-2002</tel>
-		</span>
-	</div>
-</nav>
 
-<div off-canvas="slidebar-1 left reveal">
-	<div class="slideOut js-close-left-slidebar">Close</div>
-	<ul class="align-self-center">
-		<li>Order Online</li>
-		<li>About Us</li>
-		<li>Delivery Map</li>
-		<li>Restaurant Menu</li>
-		<li>Catering Menu</li>
-		<li>Contact Us</li>
-	</ul>
-</div>
+
+
 
 <div canvas="container" class="container-fluid">
+	<nav class="navbar navbar-expand-lg navbar-hp">
+		<div class="navbar-collapse" id="navbarText">
+			<ul class="navbar-nav mr-auto">
+				<li class="nav-item">
+					<a class="nav-link js-toggle-left-slidebar"><i class="fas fa-bars"></i> Menu</a>
+				</li>
+			</ul>
+			<span class="navbar-text">
+				Open 7 days 11am - 9pm | <i class="fas fa-phone"></i> <tel>(608) 441-2002</tel>
+			</span>
+		</div>
+	</nav>
+
 	<div class="row full-height feature d-flex align-items-center">
 		<div class="col d-flex justify-content-center">
 			<div class="hp-pages">
@@ -433,4 +425,17 @@ permalink: /hpv2/
 		</div>
 	</div>
 
+</div><!-- end container-fluid -->
+
+<!-- slide in menu -->
+<div off-canvas="slidebar-1 left reveal">
+	<div class="slideOut js-close-left-slidebar">Close</div>
+	<ul class="align-self-center">
+		<li>Order Online</li>
+		<li>About Us</li>
+		<li>Delivery Map</li>
+		<li>Restaurant Menu</li>
+		<li>Catering Menu</li>
+		<li>Contact Us</li>
+	</ul>
 </div>
