--- a/_pages/hpv2.html
+++ b/_pages/hpv2.html
@@ -110,10 +110,10 @@ permalink: /hpv2/
 		</div>
 	</div>
 
-	<div class="row">
+	<!-- <div class="row">
 		<div class="col no-pad parallax-window d-sm-none d-md-block" data-parallax="scroll" data-image-src="/images/banzo-1.jpg"></div>
 		<div class="col no-pad parallax-window d-none d-sm-block d-md-none" data-parallax="scroll" data-image-src="/images/banzo-1-m.jpg"></div>
-	</div>
+	</div> -->
 
 	<div id="map" class="row">
 		<div class="col no-pad">
@@ -428,7 +428,7 @@ permalink: /hpv2/
 </div><!-- end container-fluid -->
 
 <!-- slide in menu -->
-<div off-canvas="slidebar-1 left reveal">
+<div id="fly-in-menu" off-canvas="slidebar-1 left reveal">
 	<div class="slideOut js-close-left-slidebar">Close</div>
 	<ul class="align-self-center">
 		<li>Order Online</li>
