--- a/_pages/hpv2.html
+++ b/_pages/hpv2.html
@@ -17,7 +17,7 @@ permalink: /hpv2/
 	</div>
 </nav>
 
-<div canvas="container" class="container-fluid">
+<div class="container-fluid">
 
 	<div class="row full-height feature d-flex align-items-center">
 		<div class="col d-flex justify-content-center">
@@ -424,16 +424,3 @@ permalink: /hpv2/
 	</div>
 
 </div><!-- end container-fluid -->
-
-<!-- slide in menu -->
-<div id="fly-in-menu" off-canvas="slidebar-1 left reveal">
-	<div class="slideOut js-close-left-slidebar">Close</div>
-	<ul class="align-self-center">
-		<li>Order Online</li>
-		<li>About Us</li>
-		<li>Delivery Map</li>
-		<li>Restaurant Menu</li>
-		<li>Catering Menu</li>
-		<li>Contact Us</li>
-	</ul>
-</div>
