--- a/_pages/hpv2.html
+++ b/_pages/hpv2.html
@@ -1,21 +1,7 @@
 ---
-layout: homepage
+layout: homepage-v2
 permalink: /hpv2/
 ---
-
-
-<nav class="navbar navbar-expand-lg navbar-hp">
-	<div class="navbar-collapse" id="navbarText">
-		<ul class="navbar-nav mr-auto">
-			<li class="nav-item">
-				<a class="nav-link js-toggle-left-slidebar"><i class="fas fa-bars"></i> Menu</a>
-			</li>
-		</ul>
-		<span class="navbar-text">
-			Open 7 days 11am - 9pm | <i class="fas fa-phone"></i> <tel>(608) 441-2002</tel>
-		</span>
-	</div>
-</nav>
 
 <div class="container-fluid">
 
