--- a/_pages/hpv2.html
+++ b/_pages/hpv2.html
@@ -161,7 +161,7 @@ permalink: /hpv2/
 	</div>
 
 	<div id="menu" class="row pad6vw d-flex justify-content-center">
-		<div class="col-md-8">
+		<div class="col-md-8 white">
 			<h2 class="title menu">Restaurant Menu</h2>
 
 			<div id="banzo-menu">
@@ -358,7 +358,7 @@ permalink: /hpv2/
 			</div><!--END #BANZO MENU-->
 		</div>
 		<div class="clearfix"></div>
-		<div id="catering" class="col-md-8">
+		<div id="catering" class="col-md-8 white">
 			<h2 class="title">Catering <a href="/pdf/banzocateringmenu.pdf" target="_blank"><button type="button" class="btn btn-dark">CATERING MENU.PDF</button></a></h2>
 
 			<p>Tell us about your event! We'll take care of the rest.</p>
