--- a/_pages/hpv2.html
+++ b/_pages/hpv2.html
@@ -160,7 +160,7 @@ permalink: /hpv2/
 		</div>
 	</div>
 
-	<div id="menu" class="row pad6vw d-flex justify-content-center">
+	<div id="menu" class="row pad6vw d-flex justify-content-center blurp">
 		<div class="col-md-8 white">
 			<h2 class="title menu">Restaurant Menu</h2>
 
