--- a/_pages/banzo.html
+++ b/_pages/banzo.html
@@ -25,10 +25,7 @@ permalink: /banzo/
 		</div>
 	</div>
 
-	<div class="row">
-		<div class="col no-pad parallax-window d-sm-none d-md-block" data-parallax="scroll" data-image-src="/images/banzo-2.jpg"></div>
-		<div class="col no-pad parallax-window d-none d-sm-block d-md-none" data-parallax="scroll" data-image-src="/images/banzo-2-m.jpg"></div>
-	</div>
+	<div class="row oops-lax-1"></div>
 
 	<div id="contact" class="row pad6vw">
 		<div class="col-md pad02vw">
