--- a/_pages/banzo.html
+++ b/_pages/banzo.html
@@ -65,10 +65,8 @@ permalink: /banzo/
 		</div>
 	</div>
 
-	<div class="row">
-		<div class="col no-pad parallax-window d-sm-none d-md-block" data-parallax="scroll" data-image-src="/images/banzo-4.jpg"></div>
-		<div class="col no-pad parallax-window d-none d-sm-block d-md-none" data-parallax="scroll" data-image-src="/images/banzo-4-m.jpg"></div>
-	</div>
+
+	<div class="row oops-lax-2"></div>
 
 	<div id="menu" class="row pad6vw d-flex justify-content-center">
 		<div class="col-md-8">
