--- a/_pages/food-carts.html
+++ b/_pages/food-carts.html
@@ -23,10 +23,8 @@ permalink: /food-carts/
 		</div>
 	</div>
 
-	<div class="row">
-		<div class="col no-pad parallax-window d-sm-none d-md-block" data-parallax="scroll" data-image-src="/images/foodcart-1.jpg"></div>
-		<div class="col no-pad parallax-window d-none d-sm-block d-md-none" data-parallax="scroll" data-image-src="/images/foodcart-1-m.jpg"></div>
-	</div>
+	<div class="row oops-lax-3"></div>
+
 
 	<div id="contact" class="row pad6vw">
 
@@ -68,10 +66,7 @@ permalink: /food-carts/
 		</div>
 	</div>
 
-	<div class="row">
-		<div class="col no-pad parallax-window d-sm-none d-md-block" data-parallax="scroll" data-image-src="/images/foodcart-4.jpg"></div>
-		<div class="col no-pad parallax-window d-none d-sm-block d-md-none" data-parallax="scroll" data-image-src="/images/foodcart-4-m.jpg"></div>
-	</div>
+	<div class="row oops-lax-4"></div>
 
 	<div id="menu" class="row pad6vw d-flex justify-content-center">
 		<div class="col-md-8">
