--- a/index.html
+++ b/index.html
@@ -33,14 +33,8 @@ permalink: /
 		</a>
 	</div>
 
-	<div id="twitter" class="row">
-		<div id="twitter-feed-bg" class="col-md-8 block">
-			<h1 style="padding:15px;">WHAT'S THE BUZZ</h1>
-			<div id="twitter-feed">
-				<a class="twitter-timeline" data-height="600" href="https://twitter.com/BanzoMadison?ref_src=twsrc%5Etfw">Tweets by BanzoMadison</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-			</div>
-		</div>
-		<div class="col block d-flex align-items-center">
+	<div id="twitter" class="row d-flex justify-content-center">
+		<div class="col-6">
 			<div class="text text-center">
 				<h2 class="title">Voted Madison's favorite Mediterranean / MiddleEastern restaurant<br><br>
 
