fixed weird footer

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ permalink: /
 	</div>
 
 	<div id="twitter" class="row d-flex justify-content-center">
-		<div class="col-6">
+		<div class="col-6 white">
 			<div class="text text-center">
 				<h2 class="title">Voted Madison's favorite Mediterranean / MiddleEastern restaurant<br><br>
 
