--- a/_pages/banzo.html
+++ b/_pages/banzo.html
@@ -54,13 +54,13 @@ permalink: /banzo/
 			</a>
 			<p>(608) 441-2002</p>
 			<a href="https://www.facebook.com/banzomadison/" target="_blank">
-				<i class="fa fa-facebook" aria-hidden="true"></i>
+				<i class="fab fa-facebook-f"></i>
 			</a>
 			<a href="https://twitter.com/banzomadison/" target="_blank">
-				<i class="fa fa-twitter" aria-hidden="true"></i>
+				<i class="fab fa-twitter"></i>
 			</a>
 			<a href="https://www.instagram.com/banzomadison/" target="_blank">
-				<i class="fa fa-instagram" aria-hidden="true"></i>
+				<i class="fab fa-instagram"></i>
 			</a>
 		</div>
 	</div>
