--- a/_pages/food-carts.html
+++ b/_pages/food-carts.html
@@ -54,13 +54,13 @@ permalink: /food-carts/
 			<a style="color:#000;" href="tel:6084412002">(608) 441-2002</a></p>
 			<p>
 				<a style="color:#000;" href="https://www.facebook.com/banzomadison/" target="_blank">
-					<i class="fa fa-facebook" aria-hidden="true"></i>
+					<i class="fab fa-facebook-f"></i>
 				</a>
 				<a style="color:#000;" href="https://twitter.com/banzomadison/" target="_blank">
-					<i class="fa fa-twitter" aria-hidden="true"></i>
+					<i class="fab fa-twitter"></i>
 				</a>
 				<a style="color:#000;" href="https://www.instagram.com/banzomadison/" target="_blank">
-					<i class="fa fa-instagram" aria-hidden="true"></i>
+					<i class="fab fa-instagram"></i>
 				</a>
 			</p>
 		</div>
@@ -82,32 +82,38 @@ permalink: /food-carts/
 			<p>*No requests are confirmed until approval is received from our catering team. Please allow up to 2 business days for a response from our catering team. DO NOT submit duplicate requests via email or phone. If your event requires immediate confirmation, please skip this form and call (608) 441-2002. Thank you!</p>
 
 			<div class="row">
-				<div class="col-md-8">
+				<div class="col">
 					<form role="form" action="https://formspree.io/catering.banzo@gmail.com" method="POST">
 						<input type="hidden" name="recipient" value="catering.banzo#gmail.com">
-						<div class="form-group">
-							<label for="inputName">Your Name</label>
-							<input type="text" name="name" class="form-control" id="inputName">
-						</div>
-						<div class="form-group">
-							<label for="inputPhone">Phone Number</label>
-							<input type="tel" name="phone-number" class="form-control" id="inputPhone">
-						</div>
-						<div class="form-group">
-							<label for="inputDate">Event Date</label>
-		    			<input type="text" name="date" class="form-control" id="inputDate">
-						</div>
-						<div class="form-group">
-							<label for="inputTime">Event time</label>
-							<input type="text" name="time" class="form-control" id="inputTime">
-						</div>
-						<div class="form-group">
-							<label for="inputGuests">Number of guests</label>
-							<input type="text" name="guest-number" class="form-control" id="inputGuests">
-						</div>
-						<div class="form-group">
-							<label for="inputEmail">Your email</label>
-							<input type="email" name="email" class="form-control" id="inputEmail">
+						<div class="row">
+							<div class="col">
+								<div class="form-group">
+									<label for="inputName">Your Name</label>
+									<input type="text" name="name" class="form-control" id="inputName">
+								</div>
+								<div class="form-group">
+									<label for="inputPhone">Phone Number</label>
+									<input type="tel" name="phone-number" class="form-control" id="inputPhone">
+								</div>
+								<div class="form-group">
+									<label for="inputDate">Event Date</label>
+				    			<input type="text" name="date" class="form-control" id="inputDate">
+								</div>
+							</div>
+							<div class="col">
+								<div class="form-group">
+									<label for="inputTime">Event time</label>
+									<input type="text" name="time" class="form-control" id="inputTime">
+								</div>
+								<div class="form-group">
+									<label for="inputGuests">Number of guests</label>
+									<input type="text" name="guest-number" class="form-control" id="inputGuests">
+								</div>
+								<div class="form-group">
+									<label for="inputEmail">Your email</label>
+									<input type="email" name="email" class="form-control" id="inputEmail">
+								</div>
+							</div>
 						</div>
 						<div class="form-group">
 							<label for="contact-message">Additional information</label>
