order now button

--- a/_pages/hpv2.html
+++ b/_pages/hpv2.html
@@ -6,6 +6,10 @@ robots: noindex
 
 <div class="container-fluid">
 
+	<a href="javascript:void(0)" target="_blank">
+		<div id="orderNow"></div>
+	</a>
+
 	<div class="row full-height feature d-flex align-items-center">
 		<div class="col d-flex justify-content-center">
 			<div class="hp-pages">
@@ -132,7 +136,7 @@ robots: noindex
 			</a>
 		</div>
 		<div class="col-md pad02vw">
-			<h2 class="title">Opening Times</h2>
+			<h2 class="title">Restaurant Hours</h2>
 			<p>Monday: 11:00a &ndash; 9:00p<br>
 				Tuesday: 11:00a &ndash; 9:00p<br>
 				Wednesday: 11:00a &ndash; 9:00p<br>
