--- a/_pages/food-carts.html
+++ b/_pages/food-carts.html
@@ -42,7 +42,7 @@ permalink: /food-carts/
 			</p>
 		</div>
 		<div class="col-md pad02vw">
-			<h2 class="title">DANE CO. FARMERS MARKET<br>(2017 Season now closed)</h2>
+			<h2 class="title">DANE CO. FARMERS MARKET<br>(Season is Closed)</h2>
 			<p>Saturday: 11:00a &ndash; 2:00p</p>
 		</div>
 	</div>
@@ -55,9 +55,6 @@ permalink: /food-carts/
 			<p>
 				<a style="color:#000;" href="https://www.facebook.com/banzomadison/" target="_blank">
 					<i class="fab fa-facebook-f"></i>
-				</a>
-				<a style="color:#000;" href="https://twitter.com/banzomadison/" target="_blank">
-					<i class="fab fa-twitter"></i>
 				</a>
 				<a style="color:#000;" href="https://www.instagram.com/banzomadison/" target="_blank">
 					<i class="fab fa-instagram"></i>
