--- a/_pages/hpv2.html
+++ b/_pages/hpv2.html
@@ -162,9 +162,34 @@ robots: noindex
 				</a>
 			</div>
 		</div>
+	</div>
+
+	<div class="row oops-lax-5"></div>
+
+	<div id="food-carts" class="pad6vw">
+ 		<div class="row">
+			<div class="col-md pad02vw">
+				<h2 class="title">LIBRARY MALL<br>(Lake &amp; State St)</h2>
+				<p>Tuesday: 11:00a &ndash; 2:00p<br>
+					Thursday: 11:00a &ndash; 2:00p
+				</p>
+			</div>
+			<div class="col-md pad02vw">
+				<h2 class="title">CAPITAL SQUARE<br>(Webster &amp; Main St)</h2>
+				<p>Monday: 11:00a &ndash; 2:00p<br>
+					Wednesday: 11:00a &ndash; 2:00p<br>
+					Friday: 11:00a &ndash; 2:00p<br>
+				</p>
+			</div>
+			<div class="col-md pad02vw">
+				<h2 class="title">DANE CO. FARMERS MARKET<br>(Season is Closed)</h2>
+				<p>Saturday: 11:00a &ndash; 2:00p</p>
+			</div>
+		</div>
+
 		<div class="row">
-			<div class="col center">
-				<p><em>*Cart schedule subject to frequent change. Check social media or call store for most up-to-date locations.</em></p>
+			<div class="col center banzo-social">
+				<p><em>*Food cart schedule subject to frequent change.  Check social media or call store for most up-to-date locations.</em></p>
 			</div>
 		</div>
 	</div>
@@ -418,32 +443,6 @@ robots: noindex
 		</div>
 	</div>
 
-	<div class="pad6vw">
- 		<div class="row">
-			<div class="col-md pad02vw">
-				<h2 class="title">LIBRARY MALL<br>(Lake &amp; State St)</h2>
-				<p>Tuesday: 11:00a &ndash; 2:00p<br>
-					Thursday: 11:00a &ndash; 2:00p
-				</p>
-			</div>
-			<div class="col-md pad02vw">
-				<h2 class="title">CAPITAL SQUARE<br>(Webster &amp; Main St)</h2>
-				<p>Monday: 11:00a &ndash; 2:00p<br>
-					Wednesday: 11:00a &ndash; 2:00p<br>
-					Friday: 11:00a &ndash; 2:00p<br>
-				</p>
-			</div>
-			<div class="col-md pad02vw">
-				<h2 class="title">DANE CO. FARMERS MARKET<br>(Season is Closed)</h2>
-				<p>Saturday: 11:00a &ndash; 2:00p</p>
-			</div>
-		</div>
 
-		<div class="row">
-			<div class="col center banzo-social">
-				<p><em>*Cart schedule subject to frequent change.  Check social media or call store for most up-to-date locations.</em></p>
-			</div>
-		</div>
-	</div>
 
 </div><!-- end container-fluid -->
