--- a/_pages/hpv2.html
+++ b/_pages/hpv2.html
@@ -130,7 +130,7 @@ robots: noindex
 				<h2 class="title">Order Online</h2>
 				<p>Don't get up.<br>Make an order while sitting right where you are.</p>
 				<a href="https://www.toasttab.com/banzo-sherman-ave/v2/online-order#!/" target="_blank">
-					<button type="button" class="btn btn-dark">ORDER ONLINE</button>
+					<button type="button" class="Order btn">ORDER ONLINE</button>
 				</a>
 			</div>
 			<div class="col-md pad02vw">
