--- a/_pages/hpv2.html
+++ b/_pages/hpv2.html
@@ -21,72 +21,6 @@ robots: noindex
 		</a>
 	</div>
 
-	<!-- <div id="twitter" class="row">
-		<div id="twitter-feed-bg" class="col-md-8 block">
-			<h1 style="padding:15px;">WHAT'S THE BUZZ</h1>
-			<div id="twitter-feed">
-				<a class="twitter-timeline" data-height="600" href="https://twitter.com/BanzoMadison?ref_src=twsrc%5Etfw">Tweets by BanzoMadison</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-			</div>
-		</div>
-		<div class="col block d-flex align-items-center">
-			<div class="text text-center">
-				<h2 class="title">Voted Madison's favorite Mediterranean / MiddleEastern restaurant<br><br>
-
-				<a href="https://www.toasttab.com/banzo-sherman-ave/v2/online-order#!/" target="_blank">
-					<button type="button" class="btn btn-dark">ORDER ONLINE</button>
-				</a></h2>
-				<h2 class="title">For Event Catering:<br><br>
-				<a href="#menu" class="scroll hp-cater">
-					<button type="button" class="btn btn-dark">Click Here!</button>
-				</a></h2>
-			</div>
-		</div>
-	</div> -->
-
-	<!-- <div id="menu" class="row justify-content-center collapse">
-		<div class="col-md-8">
-			<h2 class="title">Event Catering <a href="/pdf/catering.pdf" target="_blank"><button type="button" class="btn btn-dark">CATERING MENU.PDF</button></a></h2>
-			<p>Tell us about your event! We'll take care of the rest.</p>
-			<p>*No requests are confirmed until approval is received from our catering team. Please allow up to 2 business days for a response from our catering team. DO NOT submit duplicate requests via email or phone. If your event requires immediate confirmation, please skip this form and call (608) 441-2002. Thank you!</p>
-
-			<div class="row">
-				<div class="col-md-8">
-					<form role="form" action="https://formspree.io/catering.banzo@gmail.com" method="POST">
-						<input type="hidden" name="recipient" value="catering.banzo#gmail.com">
-						<div class="form-group">
-							<label for="inputName">Your Name</label>
-							<input type="text" name="name" class="form-control" id="inputName">
-						</div>
-						<div class="form-group">
-							<label for="inputPhone">Phone Number</label>
-							<input type="tel" name="phone-number" class="form-control" id="inputPhone">
-						</div>
-						<div class="form-group">
-							<label for="inputDate">Event Date</label>
-		    			<input type="text" name="date" class="form-control" id="inputDate">
-						</div>
-						<div class="form-group">
-							<label for="inputTime">Event time</label>
-							<input type="text" name="time" class="form-control" id="inputTime">
-						</div>
-						<div class="form-group">
-							<label for="inputGuests">Number of guests</label>
-							<input type="text" name="guest-number" class="form-control" id="inputGuests">
-						</div>
-						<div class="form-group">
-							<label for="inputEmail">Your email</label>
-							<input type="email" name="email" class="form-control" id="inputEmail">
-						</div>
-						<div class="form-group">
-							<label for="contact-message">Additional information</label>
-							<textarea type="text" name="aditional-info" class="form-control" id="contact-message" rows="5"></textarea>
-						</div>
-						<button type="submit" value="send" name="submit" class="btn btn-primary">Submit</button>
-					</form>
-				</div>
-			</div>
-		</div>
-	</div> -->
 
 	<div id="about" class="row">
 		<div class="col">
@@ -96,33 +30,7 @@ robots: noindex
 		</div>
 	</div>
 
-	<!-- <div class="row">
-		<div class="col no-pad parallax-window d-sm-none d-md-block" data-parallax="scroll" data-image-src="/images/banzo-1.jpg"></div>
-		<div class="col no-pad parallax-window d-none d-sm-block d-md-none" data-parallax="scroll" data-image-src="/images/banzo-1-m.jpg"></div>
-	</div> -->
-
-	<div id="map" class="row">
-		<div class="col no-pad">
-			<div class="map-overlay" onClick="style.pointerEvents='none'"></div>
-			<style>
-			.map-overlay {
-			   background:transparent;
-			   position:absolute;
-			   width:100%;
-			   height:0; /* your iframe height */
-			   padding-bottom: 44.25%;
-			   z-index: 10;
-			}
-
-			.embed-container { position: relative; padding-bottom: 44.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute;border:none; top: 0; left: 0; width: 100%; height: 100%; }
-			@media (max-width: 767px) and (min-width:1px){
-				.embed-container { padding-bottom: 115%;}
-				.map-overlay { padding-bottom: 115%;}
-			}
-			</style>
-			<div class='embed-container'><iframe src="https://www.google.com/maps/d/embed?mid=1pgxOJlWKa02YGRAdfpftCxm_uj8&z=13" width="640" height="480"></iframe></div>
-		</div>
-	</div>
+	<div class="row oops-lax-6"></div>
 
 	<div id="contact">
 		<div class="row pad6vw">
@@ -443,6 +351,27 @@ robots: noindex
 		</div>
 	</div>
 
+	<div id="map" class="row">
+		<div class="col no-pad">
+			<div class="map-overlay" onClick="style.pointerEvents='none'"></div>
+			<style>
+			.map-overlay {
+				 background:transparent;
+				 position:absolute;
+				 width:100%;
+				 height:0; /* your iframe height */
+				 padding-bottom: 44.25%;
+				 z-index: 10;
+			}
 
+			.embed-container { position: relative; padding-bottom: 44.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute;border:none; top: 0; left: 0; width: 100%; height: 100%; }
+			@media (max-width: 767px) and (min-width:1px){
+				.embed-container { padding-bottom: 115%;}
+				.map-overlay { padding-bottom: 115%;}
+			}
+			</style>
+			<div class='embed-container'><iframe src="https://www.google.com/maps/d/embed?mid=1pgxOJlWKa02YGRAdfpftCxm_uj8&z=13" width="640" height="480"></iframe></div>
+		</div>
+	</div>
 
 </div><!-- end container-fluid -->
