--- a/_pages/hpv2.html
+++ b/_pages/hpv2.html
@@ -34,65 +34,77 @@ robots: noindex
 
 	<div id="contact">
 		<div class="row">
-			<div class="col pad6vw restarant">
+			<div class="col-md-6 col-12 pad6vw restaurant">
+				<h1>Restaurant</h1>
 				<div class="p-6 white">
-					<h1>Restaurant</h1>
 					<div class="row">
-						<h2 class="title">Order Online</h2>
-						<p>Don't get up.<br>Make an order while sitting right where you are.</p>
-						<a href="https://www.toasttab.com/banzo-sherman-ave/v2/online-order#!/" target="_blank">
-							<button type="button" class="btn-primary btn">ORDER ONLINE</button>
-						</a>
+						<div class="col">
+							<h2 class="title">Order Online</h2>
+							<p>Don't get up.<br>Make an order while sitting right where you are.</p>
+							<a href="https://www.toasttab.com/banzo-sherman-ave/v2/online-order#!/" target="_blank">
+								<button type="button" class="btn-primary btn">ORDER ONLINE</button>
+							</a>
+						</div>
 					</div>
 					<div class="row">
-						<h2 class="title">Restaurant Hours</h2>
-						<p>Monday: 11:00a &ndash; 9:00p<br>
-							Tuesday: 11:00a &ndash; 9:00p<br>
-							Wednesday: 11:00a &ndash; 9:00p<br>
-							Thursday: 11:00a &ndash; 9:00p<br>
-							Friday: 11:00a &ndash; 9:00p<br>
-							Saturday: 11:00a &ndash; 9:00p<br>
-							Sunday: 11:00a &ndash; 9:00p
-						</p>
+						<div class="col">
+							<h2 class="title">Restaurant Hours</h2>
+							<p>Monday: 11:00a &ndash; 9:00p<br>
+								Tuesday: 11:00a &ndash; 9:00p<br>
+								Wednesday: 11:00a &ndash; 9:00p<br>
+								Thursday: 11:00a &ndash; 9:00p<br>
+								Friday: 11:00a &ndash; 9:00p<br>
+								Saturday: 11:00a &ndash; 9:00p<br>
+								Sunday: 11:00a &ndash; 9:00p
+							</p>
+						</div>
 					</div>
 					<div class="row">
-						<h2 class="title">Contact</h2>
-						<p>2105 Sherman Ave<br>Madison, WI 53704</p>
-						<a href="#map" class="scroll">
-							View map
-						</a>
-						<p>(608) 441-2002</p>
-						<a href="https://www.facebook.com/banzomadison/" target="_blank">
-							<i class="fab fa-facebook-f"></i>
-						</a>
-						<a href="https://twitter.com/banzomadison/" target="_blank">
-							<i class="fab fa-twitter"></i>
-						</a>
-						<a href="https://www.instagram.com/banzomadison/" target="_blank">
-							<i class="fab fa-instagram"></i>
-						</a>
+						<div class="col">
+							<h2 class="title">Contact</h2>
+							<p>2105 Sherman Ave<br>Madison, WI 53704</p>
+							<a href="#map" class="scroll">
+								View map
+							</a>
+							<p>(608) 441-2002</p>
+							<a href="https://www.facebook.com/banzomadison/" target="_blank">
+								<i class="fab fa-facebook-f"></i>
+							</a>
+							<a href="https://twitter.com/banzomadison/" target="_blank">
+								<i class="fab fa-twitter"></i>
+							</a>
+							<a href="https://www.instagram.com/banzomadison/" target="_blank">
+								<i class="fab fa-instagram"></i>
+							</a>
+						</div>
 					</div>
 				</div>
 			</div>
-			<div class="col pad6vw carts">
+			<div class="col-md-6 col-12 pad6vw carts">
+				<h1>Food Carts</h1>
 				<div class="p-6 white">
-					<h1>Food Carts</h1>
 					<div class="row">
-						<h2 class="title">LIBRARY MALL<br>(Lake &amp; State St)</h2>
-						<p>Tuesday: 11:00a &ndash; 2:00p<br>
-							Thursday: 11:00a &ndash; 2:00p
-						</p>
+						<div class="col">
+							<h2 class="title">LIBRARY MALL<br>(Lake &amp; State St)</h2>
+							<p>Tuesday: 11:00a &ndash; 2:00p<br>
+								Thursday: 11:00a &ndash; 2:00p
+							</p>
+						</div>
 					</div>
 					<div class="row">
-						<h2 class="title">CAPITAL SQUARE<br>(Webster &amp; Main St)</h2>
-						<p>Monday: 11:00a &ndash; 2:00p<br>
-							Wednesday: 11:00a &ndash; 2:00p<br>
-							Friday: 11:00a &ndash; 2:00p<br>
-						</p>
+						<div class="col">
+							<h2 class="title">CAPITAL SQUARE<br>(Webster &amp; Main St)</h2>
+							<p>Monday: 11:00a &ndash; 2:00p<br>
+								Wednesday: 11:00a &ndash; 2:00p<br>
+								Friday: 11:00a &ndash; 2:00p<br>
+							</p>
+						</div>
 					</div>
 					<div class="row">
-						<h2 class="title">DANE CO. FARMERS MARKET<br>(Season is Closed)</h2>
-						<p>Saturday: 11:00a &ndash; 2:00p</p>
+						<div class="col">
+							<h2 class="title">DANE CO. FARMERS MARKET<br>(Season is Closed)</h2>
+							<p>Saturday: 11:00a &ndash; 2:00p</p>
+						</div>
 					</div>
 					<p><em>*Food cart schedule subject to frequent change.  Check social media or call store for most up-to-date locations.</em></p>
 				</div>
