--- a/_pages/hpv2.html
+++ b/_pages/hpv2.html
@@ -47,7 +47,7 @@ robots: noindex
 					<div class="row">
 						<div class="col">
 							<h2 class="title">Restaurant Hours</h2>
-							<p>Monday: 11:00a &ndash; 9:00p<br>
+							<p>Monday: Closed<br>
 								Tuesday: 11:00a &ndash; 9:00p<br>
 								Wednesday: 11:00a &ndash; 9:00p<br>
 								Thursday: 11:00a &ndash; 9:00p<br>
@@ -91,8 +91,8 @@ robots: noindex
 					</div>
 					<div class="row">
 						<div class="col">
-							<h2 class="title">CAPITAL SQUARE<br>(Webster &amp; Main St)</h2>
-							<p>Monday: 11:00a &ndash; 2:00p<br>
+							<h2 class="title">CAPITAL SQUARE<br>(King &amp; Main St)</h2>
+							<p><br>
 								Wednesday: 11:00a &ndash; 2:00p<br>
 								Friday: 11:00a &ndash; 2:00p<br>
 							</p>
@@ -100,7 +100,7 @@ robots: noindex
 					</div>
 					<div class="row">
 						<div class="col">
-							<h2 class="title">DANE CO. FARMERS MARKET<br>(Season is Closed)</h2>
+							<h2 class="title">DANE CO. FARMERS MARKET<br>(Apr 13 - Nov 16)</h2>
 							<p>Saturday: 11:00a &ndash; 2:00p</p>
 						</div>
 					</div>
@@ -309,8 +309,8 @@ robots: noindex
 		</div>
 		<div class="clearfix"></div>
 		<div id="catering" class="col-md-8 white">
-			<h2 class="title">Catering <a href="/pdf/banzocateringmenu.pdf" target="_blank"><button type="button" class="btn btn-dark">CATERING MENU.PDF</button></a></h2>
-
+			<h2 class="title">Catering</h2>
+			<p><a href="/pdf/banzocateringmenu.pdf" target="_blank"><button type="button" class="btn btn-primary">CATERING MENU.PDF</button></a></p>
 			<p>Tell us about your event! We'll take care of the rest.</p>
 			<p>*No requests are confirmed until approval is received from our catering team. Please allow up to 2 business days for a response from our catering team. DO NOT submit duplicate requests via email or phone. If your event requires immediate confirmation, please skip this form and call (608) 441-2002. Thank you!</p>
 
@@ -331,6 +331,10 @@ robots: noindex
 								<div class="form-group">
 									<label for="inputDate">Event Date</label>
 				    			<input type="text" name="date" class="form-control" id="inputDate">
+								</div>
+								<div class="form-group">
+									<label for="requestedOrder">Requested Order</label>
+				    			<textarea type="text" name="requested-order" class="form-control" id="requestedOrder" rows="3" placeholder="Do you want a Banzo Bar, sampler platters, buffet, full dinner or apps..? What are you thinking?"></textarea>
 								</div>
 							</div>
 							<div class="col">
