--- a/_pages/hpv2.html
+++ b/_pages/hpv2.html
@@ -64,7 +64,7 @@ robots: noindex
 							<a href="#map" class="scroll">
 								View map
 							</a>
-							<p>(608) 441-2002</p>
+							<p><i class="fas fa-phone"></i> <tel>(608) 441-2002</tel></p>
 							<a href="https://www.facebook.com/banzomadison/" target="_blank">
 								<i class="fab fa-facebook-f"></i>
 							</a>
@@ -92,7 +92,7 @@ robots: noindex
 					<div class="row">
 						<div class="col">
 							<h2 class="title">CAPITAL SQUARE<br>(King &amp; Main St)</h2>
-							<p><br>
+							<p>
 								Wednesday: 11:00a &ndash; 2:00p<br>
 								Friday: 11:00a &ndash; 2:00p<br>
 							</p>
