--- a/index.html
+++ b/index.html
@@ -104,7 +104,8 @@ permalink: /
 							<p>Saturday: 11:00a &ndash; 2:00p</p>
 						</div>
 					</div>
-					<p><em>*Food cart schedule subject to frequent change.  Check social media or call store for most up-to-date locations.</em></p>
+					<p><em>NOTE: Food cart season runs April <u>15th - December 23rd</u>.</em></p>
+					<p><em>Individual cart schedule subject to frequent change. Check social media or call store for most up-to-date locations.</em></p>
 				</div>
 			</div>
 		</div>
