test catering menu
on the banzo page

--- a/_pages/banzo.html
+++ b/_pages/banzo.html
@@ -268,6 +268,10 @@ permalink: /banzo/
 		<div class="clearfix"></div>
 		<div id="catering" class="col-md-8">
 			<h2 class="title">Catering <a href="/pdf/banzocateringmenu.pdf" target="_blank"><button type="button" class="btn btn-dark">CATERING MENU.PDF</button></a></h2>
+			<p><a href="javascript:void(0)"><button type="button" class="btn ptn-primary hp-cater">CATERING MENU</button></a></p>
+			<div class="banzo-catering">
+				<h2>Banzo Bars</h2>
+			</div>
 
 			<p>Tell us about your event! We'll take care of the rest.</p>
 			<p>*No requests are confirmed until approval is received from our catering team. Please allow up to 2 business days for a response from our catering team. DO NOT submit duplicate requests via email or phone. If your event requires immediate confirmation, please skip this form and call (608) 441-2002. Thank you!</p>
