--- a/_pages/banzo.html
+++ b/_pages/banzo.html
@@ -268,9 +268,22 @@ permalink: /banzo/
 		<div class="clearfix"></div>
 		<div id="catering" class="col-md-8">
 			<h2 class="title">Catering <a href="/pdf/banzocateringmenu.pdf" target="_blank"><button type="button" class="btn btn-dark">CATERING MENU.PDF</button></a></h2>
-			<p><a href="javascript:void(0)"><button type="button" class="btn ptn-primary hp-cater">CATERING MENU</button></a></p>
+			<p><a href="javascript:void(0)"><button type="button" class="btn btn-primary hp-cater">CATERING MENU</button></a></p>
 			<div class="banzo-catering">
-				<h2>Banzo Bars</h2>
+				<div id="banzo-menu">
+					<div class="row">
+						<div class="col">
+							<h5 class="menu-headline">Banzo Bars</h5>
+							
+							<p>Our freshly prepared ingredients provide a little of everything for everyone. Each Banzo Bar comes ready as a self-serve buffet. $9.95 per person with a 15 person minimum.</p>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col"></div>
+						<div class="col"></div>
+						<div class="col"></div>
+					</div>
+				</div>
 			</div>
 
 			<p>Tell us about your event! We'll take care of the rest.</p>
