--- a/_pages/banzo.html
+++ b/_pages/banzo.html
@@ -274,14 +274,33 @@ permalink: /banzo/
 					<div class="row">
 						<div class="col">
 							<h5 class="menu-headline">Banzo Bars</h5>
-							
 							<p>Our freshly prepared ingredients provide a little of everything for everyone. Each Banzo Bar comes ready as a self-serve buffet. $9.95 per person with a 15 person minimum.</p>
 						</div>
 					</div>
 					<div class="row">
-						<div class="col"></div>
-						<div class="col"></div>
-						<div class="col"></div>
+						<div class="col">
+							<h6>Choose Your Style</h6>
+							<div class="row">
+								<div class="col">
+									<div class="menu-item">
+										<p class="menu-title">Sandwitch</p>
+										<p class="menu-descript">Comes with full pita per person plus dill pickles and sauces. (Tahini, Chili Garlic, Yogurt Dill)</p>
+									</div>
+								</div>
+								<div class="col">
+									<div class="menu-item">
+										<p class="menu-title">Platter</p>
+										<p class="menu-descript">Comes with 1/2 a pita per person plus majadra rice and sauces. (Tahini, Chili Garlic, Yogurt Dill)</p>
+									</div>
+								</div>
+								<div class="col">
+									<div class="menu-item">
+										<p class="menu-title">Salad</p>
+										<p class="menu-descript">Comes with 1/2 a pita per person plus mixed greens, kalamata olives and lemon agave salad dressing.</p>
+									</div>
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
